--- a/Messenger Application/Base.lproj/Main.storyboard
+++ b/Messenger Application/Base.lproj/Main.storyboard
@@ -1,24 +1,108 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="Messenger_Application" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="message" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="DjR-vD-2aZ">
+                                <rect key="frame" x="30" y="33" width="260" height="123"/>
+                                <color key="tintColor" red="0.49127781390000003" green="0.50624054669999996" blue="0.68578702209999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="123.5" id="hVW-Gp-ziM"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="welcom to Messenger App" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aJz-Sh-2N9">
+                                <rect key="frame" x="58.5" y="228" width="203" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.49127781390000003" green="0.50624054669999996" blue="0.68578702209999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="highlightedColor" red="0.49127781390000003" green="0.50624054669999996" blue="0.68578702209999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rfh-x7-uSY">
+                                <rect key="frame" x="50" y="394" width="220" height="31"/>
+                                <color key="backgroundColor" red="0.49127781390000003" green="0.50624054669999996" blue="0.68578702209999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Sign in">
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uL3-Gt-f4v">
+                                <rect key="frame" x="50" y="443" width="220" height="31"/>
+                                <color key="backgroundColor" red="0.1519555863" green="0.2980444035" blue="0.70622096109999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="continue with facebook">
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4F8-Z4-eaL">
+                                <rect key="frame" x="198.5" y="494" width="71.5" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="sign up"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="I dont have an acount" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WTD-SS-0LH">
+                                <rect key="frame" x="30" y="510" width="163.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.49127781390000003" green="0.50624054669999996" blue="0.68578702209999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iPv-cG-UWI">
+                                <rect key="frame" x="50" y="267" width="220" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bbU-Hc-WuR">
+                                <rect key="frame" x="50" y="321" width="220" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" red="0.69161403180000003" green="0.72139996289999997" blue="0.77791178230000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="WTD-SS-0LH" firstAttribute="leading" secondItem="DjR-vD-2aZ" secondAttribute="leading" id="0e1-sP-aKe"/>
+                            <constraint firstItem="uL3-Gt-f4v" firstAttribute="trailing" secondItem="4F8-Z4-eaL" secondAttribute="trailing" id="4Th-bF-g48"/>
+                            <constraint firstItem="iPv-cG-UWI" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="8pP-NS-IGr"/>
+                            <constraint firstItem="bbU-Hc-WuR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="B3i-2B-2bB"/>
+                            <constraint firstItem="rfh-x7-uSY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="Bvd-1a-4ah"/>
+                            <constraint firstItem="uL3-Gt-f4v" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="Dfd-Vm-EAd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bbU-Hc-WuR" secondAttribute="trailing" constant="50" id="EOF-Ou-xb9"/>
+                            <constraint firstItem="bbU-Hc-WuR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Eq8-Nu-SsU"/>
+                            <constraint firstItem="DjR-vD-2aZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="33" id="H3y-BO-MNt"/>
+                            <constraint firstItem="DjR-vD-2aZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HL5-yn-gOn"/>
+                            <constraint firstItem="rfh-x7-uSY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LL3-NB-HAl"/>
+                            <constraint firstItem="aJz-Sh-2N9" firstAttribute="top" secondItem="DjR-vD-2aZ" secondAttribute="bottom" constant="71.5" id="SHi-Tc-RSY"/>
+                            <constraint firstItem="bbU-Hc-WuR" firstAttribute="top" secondItem="iPv-cG-UWI" secondAttribute="bottom" constant="20" id="UbS-ty-sHE"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uL3-Gt-f4v" secondAttribute="trailing" constant="50" id="bLK-Zk-j89"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="iPv-cG-UWI" secondAttribute="trailing" constant="50" id="c2H-vI-jyC"/>
+                            <constraint firstItem="4F8-Z4-eaL" firstAttribute="top" secondItem="uL3-Gt-f4v" secondAttribute="bottom" constant="20" id="hcq-38-GBz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="rfh-x7-uSY" secondAttribute="trailing" constant="50" id="iaI-gN-GjW"/>
+                            <constraint firstItem="aJz-Sh-2N9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="m6a-GP-M8R"/>
+                            <constraint firstItem="iPv-cG-UWI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="nul-2x-cvg"/>
+                            <constraint firstItem="uL3-Gt-f4v" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="odJ-SB-FSK"/>
+                            <constraint firstItem="iPv-cG-UWI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rW5-HQ-FYN"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DjR-vD-2aZ" secondAttribute="trailing" constant="30" id="riQ-ff-p0f"/>
+                            <constraint firstItem="DjR-vD-2aZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="sln-LB-Cz9"/>
+                            <constraint firstItem="rfh-x7-uSY" firstAttribute="top" secondItem="bbU-Hc-WuR" secondAttribute="bottom" constant="39" id="uWB-QH-WCF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="WTD-SS-0LH" secondAttribute="bottom" constant="37" id="wSa-Fr-ntc"/>
+                            <constraint firstItem="uL3-Gt-f4v" firstAttribute="top" secondItem="rfh-x7-uSY" secondAttribute="bottom" constant="18" id="wlD-42-0eO"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="8.6956521739130448" y="58.928571428571423"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="message" catalog="system" width="128" height="113"/>
+    </resources>
 </document>
